--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <hr>
             <div class="dropdown">
                 <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://i.pravatar.cc/40?u=admin" alt="" width="32" height="32" class="rounded-circle me-2">
+                    <img src="https://www.freepik.com/premium-vector/profile-picture-icon-human-symbol-man-women-sign-people-person-user-profile-avatar-icon_297317234.htm#fromView=keyword&page=1&position=19&uuid=8cab42e6-d841-4d1f-8e58-3b45ba549725&query=Profile" alt="" width="32" height="32" class="rounded-circle me-2">
                     <strong id="userName" style="color: var(--dark-color);">Admin General</strong>
                 </a>
                 <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser">
@@ -499,5 +499,6 @@
     <!-- Enlace al archivo JavaScript externo -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
